--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Public Draw</title>
+    <title>Draw Winning Candidates</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <style>
         .cover {
