English button labels

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 </head>
 
 <body>
-    <button id="toggleCover">Onthul & Verhul</button>
-    <button id="shuffleButton">Hussel Names</button>
-    <button id="rotateButton">Draai & Stop het wiel</button>
+    <button id="toggleCover">Cover and Uncover</button>
+    <button id="shuffleButton">Shuffle Names</button>
+    <button id="rotateButton">Start and Stop the Wheel</button>
 
     <br />
     <br />
